--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,6 +13,10 @@ jobs:
     strategy:
       matrix:
         node-version: [10.x, 12.x, 14.x]
+    
+    defaults:
+      run:
+        working-directory: ./backend
 
     steps:
     - uses: actions/checkout@v2
@@ -20,7 +24,6 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: cd backend
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
